# didactic-collapse

./: .gitignore  README (1).md  README.md  pyproject.toml
configs/: anchoring_ablation_shakedown.yaml  anchoring_confirmatory_append.yaml  baseline_anchor10.yaml  baseline_anchor20.yaml  baseline_series.yaml  csr_shakedown.yaml  csr_shakedown_k5.yaml  dbr_confirmatory.yaml  dbr_confirmatory_fast.yaml  dbr_only_confirmatory.yaml  dbr_shakedown.yaml  experiment.yaml  first_experiment.yaml  first_experiment_v2.yaml  judge_pairwise_sensitivity.yaml  judge_schema.json  judge_sensitivity_qwen.yaml  mode_compare_inference.yaml  mode_compare_training.yaml  pair_lite_shakedown.yaml  pilot.yaml  pvf_confirmatory.yaml  pvf_stress_test.yaml  pvr_shakedown.yaml  second_real_experiment.yaml  soft_pvf_confirmatory.yaml  soft_pvf_policy_tuning.yaml  soft_pvf_shakedown.yaml  train_feasibility.yaml  training_confirmatory_anchor20.yaml
notebooks/: 01_baseline_analysis.ipynb
outputs/: article_text_source_ru.txt  didactic_collapse_article_ru.docx
scripts/: audit_experiment_artifacts.py  build_article_docx.py  build_article_review_bundle.py  dbr_article_evidence.py  dbr_focused_verification.py  diagnose_accuracy_run.py  md_to_docx_ooxml.py  prepare_gsm8k.py  train_feasibility_adapter.py
tests/: test_accuracy_scoring.py  test_analysis_contracts.py  test_anchoring.py  test_anchoring_ablation_analysis.py  test_artifact_integrity_audit.py  test_baseline_series_analysis.py  test_branch_mixing_config.py  test_compare_runs.py  test_csr_recycling.py  test_data_preparation.py  test_pvr_repair.py  (+34 more)
(+802 files in other folders)
